--- a/UgCalculator/build.yaml
+++ b/UgCalculator/build.yaml
@@ -1,6 +1,6 @@
 spm:
-  - url: 
-    from:
+  - url: git@github.com:nicklockwood/Expression.git
+    from: 0.12.0
     path: 
     search-paths: []
     linked-libs: []
@@ -21,33 +21,34 @@ ios:
     output: UgCalculator/.build/ios-simulator
     extra-args:
     search-paths: []
-    linked-libs: []
+    linked-libs:
+      - Expression
   device: 
     os: 12.1
     output: UgCalculator/.build/ios-device
     extra-args: 
     search-paths: []
-    linked-libs: []
+    linked-libs:
+      - Expression
   mac:
     os: 10.11
     output: UgCalculator/.build/scade-simulator
     extra-args: 
     search-paths: []
-    linked-libs: []
+    linked-libs:
+      - Expression
   sign:
     provision-profile: /Users/juliawork/ScadeTools/certificates/Scade_Adhoc.mobileprovision
     certificate: /Users/juliawork/ScadeTools/certificates/Certificates.p12
     beta-reports-active: false
   icons: 
-    app-iphone:
-      2x:
-      3x:
-    app-ipad:
-      2x:
-      3x:
-    app-ipad-pro:
-      2x:
-      3x:
+    iphone: # or ipad, sizes: 20X20, 29X29, 40X40, 60X60, 76X76, 83.5X83.5
+      60X60_2X:
+      76X76_2X:
+      76X76_3X:
+      83.5X83.5_2X:
+    marketing:
+      1024X1024_1X:
   plist: 
     - key: CFBundleShortVersionString
       type: string  # string, bool, int, list or dict
@@ -79,22 +80,26 @@ android:
     output: UgCalculator/.build/android-armeabi-v7a
     extra-args:
     search-paths: []
-    linked-libs: []
+    linked-libs:
+      - Expression    
   x86:
     output: UgCalculator/.build/android-x86
     extra-args:
     search-paths: []
-    linked-libs: []
+    linked-libs:
+      - Expression
   arm64-v8a:
     output: UgCalculator/.build/android-arm64-v8a
     extra-args:
     search-paths: []
-    linked-libs: []
+    linked-libs:
+      - Expression
   x86_64:
     output: UgCalculator/.build/android-x86_64
     extra-args:
     search-paths: []
-    linked-libs: []
+    linked-libs:
+      - Expression
   intent-filters:
     - action:
       scheme:
