--- a/UgCryptoSwift/build.yaml
+++ b/UgCryptoSwift/build.yaml
@@ -35,19 +35,17 @@ ios:
     search-paths: []
     linked-libs: [CryptoSwift]
   sign:
-    provision-profile:
-    certificate:
+    provision-profile: /Users/juliawork/ScadeTools/certificates/Scade_Adhoc.mobileprovision
+    certificate: /Users/juliawork/ScadeTools/certificates/Certificates.p12
     beta-reports-active: false
   icons: 
-    app-iphone:
-      2x:
-      3x:
-    app-ipad:
-      2x:
-      3x:
-    app-ipad-pro:
-      2x:
-      3x:
+    iphone: # or ipad, sizes: 20X20, 29X29, 40X40, 60X60, 76X76, 83.5X83.5
+      60X60_2X:
+      76X76_2X:
+      76X76_3X:
+      83.5X83.5_2X:
+    marketing:
+      1024X1024_1X:
   plist: 
     - key: CFBundleShortVersionString
       type: string  # string, bool, int, list or dict
@@ -82,6 +80,16 @@ android:
     linked-libs: [CryptoSwift]
   x86:
     output: UgCryptoSwift/.build/android-x86
+    extra-args:
+    search-paths: []
+    linked-libs: [CryptoSwift]
+  arm64-v8a:
+    output: UgCryptoSwift/.build/android-arm64-v8a
+    extra-args:
+    search-paths: []
+    linked-libs: [CryptoSwift]
+  x86_64:
+    output: UgCryptoSwift/.build/android-x86_64
     extra-args:
     search-paths: []
     linked-libs: [CryptoSwift]
