--- a/UgAppInAppDemo/build.yaml
+++ b/UgAppInAppDemo/build.yaml
@@ -38,19 +38,17 @@ ios:
     search-paths: []
     linked-libs: []
   sign:
-    provision-profile:
-    certificate:
+    provision-profile: /Users/juliawork/ScadeTools/certificates/Scade_Adhoc.mobileprovision
+    certificate: /Users/juliawork/ScadeTools/certificates/Certificates.p12
     beta-reports-active: false
   icons: 
-    app-iphone:
-      2x:
-      3x:
-    app-ipad:
-      2x:
-      3x:
-    app-ipad-pro:
-      2x:
-      3x:
+    iphone: # or ipad, sizes: 20X20, 29X29, 40X40, 60X60, 76X76, 83.5X83.5
+      60X60_2X:
+      76X76_2X:
+      76X76_3X:
+      83.5X83.5_2X:
+    marketing:
+      1024X1024_1X:
   plist: 
     - key: CFBundleShortVersionString
       type: string  # string, bool, int, list or dict
