--- a/UgSystemDemo/build.yaml
+++ b/UgSystemDemo/build.yaml
@@ -96,6 +96,16 @@ android:
     extra-args:
     search-paths: []
     linked-libs: []
+  arm64-v8a:
+    output: UgSystemDemo/.build/android-arm64-v8a
+    extra-args:
+    search-paths: []
+    linked-libs: []
+  x86_64:
+    output: UgSystemDemo/.build/android-x86_64
+    extra-args:
+    search-paths: []
+    linked-libs: []
   intent-filters:
     - action:
       scheme:
