Updated UgCalculator example.

--- a/UgCalculator/build.yaml
+++ b/UgCalculator/build.yaml
@@ -23,6 +23,10 @@ ios:
     search-paths: []
     linked-libs:
       - Expression
+    spm:
+      dependencies:
+        - name: Expression
+          package: Expression
   device: 
     os: 12.1
     output: UgCalculator/.build/ios-device
@@ -30,16 +34,23 @@ ios:
     search-paths: []
     linked-libs:
       - Expression
+    spm:
+      dependencies:
+        - name: Expression
+          package: Expression
   mac:
     os: 10.11
     output: UgCalculator/.build/scade-simulator
     extra-args: 
     search-paths: []
     linked-libs:
-      - Expression
+    spm:
+      dependencies:
+        - name: Expression
+          package: Expression
   sign:
-    provision-profile: /Users/juliawork/ScadeTools/certificates/Scade_Adhoc.mobileprovision
-    certificate: /Users/juliawork/ScadeTools/certificates/Certificates.p12
+    provision-profile: /Users/esil/projects/scade/certs/SCADE_Wildcard_Ad_Hoc.mobileprovision
+    certificate: /Users/esil/projects/scade/certs/Certificate_Scade_Latest.p12
     beta-reports-active: false
   icons: 
     iphone: # or ipad, sizes: 20X20, 29X29, 40X40, 60X60, 76X76, 83.5X83.5
@@ -81,25 +92,37 @@ android:
     extra-args:
     search-paths: []
     linked-libs:
-      - Expression    
+    spm:
+      dependencies:
+        - name: Expression
+          package: Expression
   x86:
     output: UgCalculator/.build/android-x86
     extra-args:
     search-paths: []
     linked-libs:
-      - Expression
+    spm:
+      dependencies:
+        - name: Expression
+          package: Expression
   arm64-v8a:
     output: UgCalculator/.build/android-arm64-v8a
     extra-args:
     search-paths: []
     linked-libs:
-      - Expression
+    spm:
+      dependencies:
+        - name: Expression
+          package: Expression
   x86_64:
     output: UgCalculator/.build/android-x86_64
     extra-args:
     search-paths: []
     linked-libs:
-      - Expression
+    spm:
+      dependencies:
+        - name: Expression
+          package: Expression
   intent-filters:
     - action:
       scheme:
