--- a/UgTilesMenuDemo2/build.yaml
+++ b/UgTilesMenuDemo2/build.yaml
@@ -1,7 +1,10 @@
 spm:
-  - url: 
+  - url:
     from:
-    path: 
+    path:
+    branch:
+    exact:
+    revision:
     search-paths: []
     linked-libs: []
 
@@ -9,36 +12,39 @@ search-paths: []
 linked-libs: []
 
 ios:
-  name: UgTilesMenuDemo
-  id: com.scade.UgTilesMenuDemo
+  name: UgTilesMenuDemo2
+  id: com.scade.ugtilesmenudemo2
   device-family: iphone # iphone, ipad or universal
   supported-interface-orientations: ['portrait'] # portrait, upside_down, landscape_left or landscape_right
   supported-interface-orientationsiPad: ['portrait']
-  entitlements-file: 
+  entitlements-file:
   app-delegate-file:
+  export-method: ad-hoc # app-store, enterprise or development
   simulator:
     os: 12.1
-    output: UgTilesMenuDemo/.build/ios-simulator
+    output: UgTilesMenuDemo2/.build/ios-simulator
+    product-path: UgTilesMenuDemo2/Product/ios-simulator
     extra-args:
     search-paths: []
     linked-libs: []
-  device: 
+  device:
     os: 12.1
-    output: UgTilesMenuDemo/.build/ios-device
-    extra-args: 
+    output: UgTilesMenuDemo2/.build/ios-device
+    product-path: UgTilesMenuDemo2/Product/ios-device
+    extra-args:
     search-paths: []
     linked-libs: []
   mac:
     os: 10.11
-    output: UgTilesMenuDemo/.build/scade-simulator
-    extra-args: 
+    output:  UgTilesMenuDemo2/.build/scade-simulator
+    product-path: UgTilesMenuDemo2/Product/scade-simulator
+    extra-args:
     search-paths: []
     linked-libs: []
   sign:
-    provision-profile: /Users/juliawork/ScadeTools/certificates/Scade_Adhoc.mobileprovision
-    certificate: /Users/juliawork/ScadeTools/certificates/Certificates.p12
-    beta-reports-active: false
-  icons: 
+    provision-profile:
+    certificate:
+  icons:
     iphone: # or ipad, sizes: 20X20, 29X29, 40X40, 60X60, 76X76, 83.5X83.5
       60X60_2X:
       76X76_2X:
@@ -46,7 +52,7 @@ ios:
       83.5X83.5_2X:
     marketing:
       1024X1024_1X:
-  plist: 
+  plist:
     - key: CFBundleShortVersionString
       type: string  # string, bool, int, list or dict
       value: 1.0
@@ -55,7 +61,7 @@ ios:
       value: 1
     - key: NSLocationWhenInUseUsageDescription
       type: string
-      value: 
+      value:
     - key: NSCameraUsageDescription
       type: string
       value: Take pictures from camera
@@ -64,31 +70,45 @@ ios:
       value: Choose a photo from your library
 
 android:
-  name: UgTilesMenuDemo
-  id: com.scade.UgTilesMenuDemo
+  name: UgTilesMenuDemo2
+  id: com.scade.ugtilesmenudemo2
   version-name: 1.0.0
   version-code: 1
   build-type: Debug
   key-store-properties:
-  google-api-key: 
+  google-api-key:
   manifest-file:
   permissions: []
   armeabi-v7a:
-    output: UgTilesMenuDemo/.build/android-armeabi-v7a
+    output: UgTilesMenuDemo2/.build/android-armeabi-v7a
+    product-path: UgTilesMenuDemo2/Product/android-armeabi-v7a
+    extra-args:
+    search-paths: []
+    linked-libs: []
+  arm64-v8a:
+    output: UgTilesMenuDemo2/.build/android-arm64-v8a
+    product-path: UgTilesMenuDemo2/Product/android-arm64-v8a
     extra-args:
     search-paths: []
     linked-libs: []
   x86:
-    output: UgTilesMenuDemo/.build/android-x86
+    output: UgTilesMenuDemo2/.build/android-x86
+    product-path: UgTilesMenuDemo2/Product/android-x86
+    extra-args:
+    search-paths: []
+    linked-libs: []
+  x86_64:
+    output: UgTilesMenuDemo2/.build/android-x86_64
+    product-path: UgTilesMenuDemo2/Product/android-x86_64
     extra-args:
     search-paths: []
     linked-libs: []
   intent-filters:
     - action:
       scheme:
-      categories: [] 
+      categories: []
   icons:
     mdpi:
     hdpi:
-    xhdpi: 
+    xhdpi:
     xxhdpi:
