Updated CryptoSwift example.

--- a/UgCryptoSwift/build.yaml
+++ b/UgCryptoSwift/build.yaml
@@ -8,6 +8,7 @@ spm:
 search-paths: []
 linked-libs: []
 
+
 ios:
   name: UgCryptoSwift
   id: com.scade.UgCryptoSwift
@@ -22,18 +23,27 @@ ios:
     extra-args:
     search-paths: []
     linked-libs: [CryptoSwift]
+    spm:
+      dependencies:
+        - name: CryptoSwift
   device: 
     os: 12.1
     output: UgCryptoSwift/.build/ios-device
     extra-args: 
     search-paths: []
     linked-libs: [CryptoSwift]
+    spm:
+      dependencies:
+        - name: CryptoSwift
   mac:
     os: 10.11
     output: UgCryptoSwift/.build/scade-simulator
     extra-args: 
     search-paths: []
-    linked-libs: [CryptoSwift]
+    linked-libs: []
+    spm:
+      dependencies:
+        - name: CryptoSwift
   sign:
     provision-profile: /Users/juliawork/ScadeTools/certificates/Scade_Adhoc.mobileprovision
     certificate: /Users/juliawork/ScadeTools/certificates/Certificates.p12
@@ -77,22 +87,34 @@ android:
     output: UgCryptoSwift/.build/android-armeabi-v7a
     extra-args:
     search-paths: []
-    linked-libs: [CryptoSwift]
+    linked-libs: []
+    spm:
+      dependencies:
+        - name: CryptoSwift
   x86:
     output: UgCryptoSwift/.build/android-x86
     extra-args:
     search-paths: []
-    linked-libs: [CryptoSwift]
+    linked-libs: []
+    spm:
+      dependencies:
+        - name: CryptoSwift
   arm64-v8a:
     output: UgCryptoSwift/.build/android-arm64-v8a
     extra-args:
     search-paths: []
-    linked-libs: [CryptoSwift]
+    linked-libs: []
+    spm:
+      dependencies:
+        - name: CryptoSwift
   x86_64:
     output: UgCryptoSwift/.build/android-x86_64
     extra-args:
     search-paths: []
-    linked-libs: [CryptoSwift]
+    linked-libs: []
+    spm:
+      dependencies:
+        - name: CryptoSwift
   intent-filters:
     - action:
       scheme:
