--- a/UgLogging/CMakeLists.txt
+++ b/UgLogging/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.0)
 include(ScadeSDK)
-if("${SCADESDK_TARGET}" STREQUAL "macos")
+if(NOT "${SCADESDK_TARGET}" STREQUAL "iphoneos" AND
+   NOT "${SCADESDK_TARGET}" STREQUAL "iphonesimulator")
     set(use_spm_flag USE_SPM)
 else()
     set(use_spm_flag)
@@ -15,8 +16,7 @@ add_scade_application(UgLogging "com.scade.UgLogging"
 		RESOURCES_GROUP "Sources/UgLogging" NOPREFIX
 			main.page
 		RESOURCES_GROUP NOBASE NOPREFIX
-			"Resources/fonts"
-			"Resources/fonts/ArialMT.ttf"
+
 	IOS_EXPORT_METHOD "ad-hoc"
 	MACOS_PLIST_PROPERTIES
 		"CFBundleShortVersionString" "STRING" "1.0"
