--- a/UgSqlLiteSwift/build.yaml
+++ b/UgSqlLiteSwift/build.yaml
@@ -93,6 +93,7 @@ android:
     spm:
       dependencies:
         - name: SQLite
+          package: SQLite.swift
   arm64-v8a:
     output: UgSqlLiteSwift/.build/android-x86
     product-path: UgSqlLiteSwift/Product/android-arm64-v8a
@@ -102,6 +103,7 @@ android:
     spm:
       dependencies:
         - name: SQLite
+          package: SQLite.swift
   x86:
     output: UgSqlLiteSwift/.build/android-x86
     extra-args:
@@ -110,6 +112,7 @@ android:
     spm:
       dependencies:
         - name: SQLite
+          package: SQLite.swift
   x86_64:
     output: UgSqlLiteSwift/.build/android-x86
     product-path: UgSqlLiteSwift/Product/android-x86_64
@@ -119,6 +122,7 @@ android:
     spm:
       dependencies:
         - name: SQLite
+          package: SQLite.swift
   intent-filters:
     - action:
       scheme:
