--- a/Kyle1/build.yaml
+++ b/Kyle1/build.yaml
@@ -22,24 +22,27 @@ ios:
   simulator:
     os: 12.1
     output: Kyle1/.build/ios-simulator
+    product-path: Kyle1/Product/ios-simulator
     extra-args:
     search-paths: []
     linked-libs: []
   device: 
     os: 12.1
     output: Kyle1/.build/ios-device
+    product-path: Kyle1/Product/ios-device
     extra-args: 
     search-paths: []
     linked-libs: []
   mac:
     os: 10.11
     output: Kyle1/.build/scade-simulator
+    product-path: Kyle1/Product/scade-simulator
     extra-args: 
     search-paths: []
     linked-libs: []
   sign:
-    provision-profile: /Users/juliawork/ScadeTools/certificates/Scade_Adhoc.mobileprovision
-    certificate: /Users/juliawork/ScadeTools/certificates/Certificates.p12
+    provision-profile:
+    certificate:
     beta-reports-active: false
   icons: 
     iphone: # or ipad, sizes: 20X20, 29X29, 40X40, 60X60, 76X76, 83.5X83.5
@@ -78,21 +81,25 @@ android:
   permissions: []
   armeabi-v7a:
     output: Kyle1/.build/android-armeabi-v7a
+    product-path: Kyle1/Product/android-armeabi-v7a
     extra-args:
     search-paths: []
     linked-libs: []
   arm64-v8a:
     output: Kyle1/.build/android-arm64-v8a
+    product-path: Kyle1/Product/android-arm64-v8a
     extra-args:
     search-paths: []
     linked-libs: []
   x86:
     output: Kyle1/.build/android-x86
+    product-path: Kyle1/Product/android-x86
     extra-args:
     search-paths: []
     linked-libs: []
   x86_64:
     output: Kyle1/.build/android-x86_64
+    product-path: Kyle1/Product/android-x86_64
     extra-args:
     search-paths: []
     linked-libs: []
