UgCalculator: removed Expression library from list of libraries for IOS (NM-876)
We don't need it in the list of libraries after switching build to SPM

--- a/UgCalculator/build.yaml
+++ b/UgCalculator/build.yaml
@@ -22,8 +22,7 @@ ios:
     product-path: UgCalculator/Product/ios-simulator
     extra-args:
     search-paths: []
-    linked-libs:
-      - Expression
+    linked-libs: []
     spm:
       dependencies:
         - name: Expression
@@ -34,8 +33,7 @@ ios:
     product-path: UgCalculator/Product/ios-device
     extra-args: 
     search-paths: []
-    linked-libs:
-      - Expression
+    linked-libs: []
     spm:
       dependencies:
         - name: Expression
