--- a/UgSqlLiteSwift/build.yaml
+++ b/UgSqlLiteSwift/build.yaml
@@ -96,7 +96,7 @@ android:
         - name: SQLite
           package: SQLite.swift
   arm64-v8a:
-    output: UgSqlLiteSwift/.build/android-x86
+    output: UgSqlLiteSwift/.build/android-arm64-v8a
     product-path: UgSqlLiteSwift/Product/android-arm64-v8a
     extra-args:
     search-paths: []
@@ -115,7 +115,7 @@ android:
         - name: SQLite
           package: SQLite.swift
   x86_64:
-    output: UgSqlLiteSwift/.build/android-x86
+    output: UgSqlLiteSwift/.build/android-x86_64
     product-path: UgSqlLiteSwift/Product/android-x86_64
     extra-args:
     search-paths: []
