--- a/SimplyE/build.yaml
+++ b/SimplyE/build.yaml
@@ -1,23 +1,21 @@
 spm:
-  - url: 
+  - url:
     from:
-    path: 
+    path:
     branch:
-    exact: 
+    exact:
     revision:
     search-paths: []
     linked-libs: []
-
 search-paths: []
 linked-libs: []
-
 ios:
   name: SimplyE
   id: com.scade.simplye
   device-family: iphone # iphone, ipad or universal
   supported-interface-orientations: ['portrait'] # portrait, upside_down, landscape_left or landscape_right
   supported-interface-orientationsiPad: ['portrait']
-  entitlements-file: 
+  entitlements-file:
   app-delegate-file:
   simulator:
     os: 12.1
@@ -25,32 +23,32 @@ ios:
     extra-args:
     search-paths: []
     linked-libs: []
-  device: 
+  device:
     os: 12.1
     output: SimplyE/.build/ios-device
     product-path: SimplyE/Product/ios-device
-    extra-args: 
+    extra-args:
     search-paths: []
     linked-libs: []
   mac:
     os: 10.11
     output: SimplyE/.build/scade-simulator
-    extra-args: 
+    extra-args:
     search-paths: []
     linked-libs: []
   sign:
     provision-profile:
     certificate:
     beta-reports-active: false
-  icons: 
+  icons:
     iphone: # or ipad, sizes: 20X20, 29X29, 40X40, 60X60, 76X76, 83.5X83.5
-      60X60_2X: Assets/ScadeBooksIcons/ios/AppIcon.appiconset/Icon-App-60x60@2x.png
-      76X76_2X: Assets/ScadeBooksIcons/ios/AppIcon.appiconset/Icon-App-76x76@2x.png
-      76X76_3X: Assets/ScadeBooksIcons/ios/AppIcon.appiconset/Icon-App-76x76@3x.png
-      83.5X83.5_2X: Assets/ScadeBooksIcons/ios/AppIcon.appiconset/Icon-App-83.5x83.5@2x.png
+      60X60_2X: #Assets/ScadeBooksIcons/ios/AppIcon.appiconset/Icon-App-60x60@2x.png
+      76X76_2X: #Assets/ScadeBooksIcons/ios/AppIcon.appiconset/Icon-App-76x76@2x.png
+      76X76_3X: #Assets/ScadeBooksIcons/ios/AppIcon.appiconset/Icon-App-76x76@3x.png
+      83.5X83.5_2X: #Assets/ScadeBooksIcons/ios/AppIcon.appiconset/Icon-App-83.5x83.5@2x.png
     marketing:
-      1024X1024_1X: Assets/ScadeBooksIcons/ios/iTunesArtwork@1x.png
-  plist: 
+      1024X1024_1X: #Assets/ScadeBooksIcons/ios/iTunesArtwork@1x.png
+  plist:
     - key: CFBundleShortVersionString
       type: string  # string, bool, int, list or dict
       value: 1.0
@@ -59,22 +57,21 @@ ios:
       value: 1
     - key: NSLocationWhenInUseUsageDescription
       type: string
-      value: 
+      value:
     - key: NSCameraUsageDescription
       type: string
       value: Take pictures from camera
     - key: NSPhotoLibraryUsageDescription
       type: string
       value: Choose a photo from your library
-
 android:
   name: simplye
   id: com.scade.simplye
-  version-name: 1.0.0
-  version-code: 1
+  version-name: 99.0.0
+  version-code: 99
   build-type: Release
   key-store-properties: /Users/olanrewajuolakunle/keystore.properties
-  google-api-key: 
+  google-api-key:
   manifest-file:
   permissions: []
   armeabi-v7a:
@@ -104,7 +101,7 @@ android:
   intent-filters:
     - action:
       scheme:
-      categories: [] 
+      categories: []
   icons:
     mdpi: Assets/ScadeBooksIcons/android/mipmap-mdpi/ic_launcher.png
     hdpi: Assets/ScadeBooksIcons/android/mipmap-hdpi/ic_launcher.png
