added IOS certificates and provision profiles env variables for automatic testing

--- a/UgAsyncExample/build.yaml
+++ b/UgAsyncExample/build.yaml
@@ -40,8 +40,8 @@ ios:
     search-paths: []
     linked-libs: []
   sign:
-    provision-profile:
-    certificate:
+    provision-profile: ${env.UGEXAMPLES_IOS_PROVISION_PROFILE}
+    certificate: ${env.UGEXAMPLES_IOS_CERTIFICATE}
   icons:
     iphone: # or ipad, sizes: 20X20, 29X29, 40X40, 60X60, 76X76, 83.5X83.5
       60X60_2X:
