--- a/UgSqlLiteSwift/build.yaml
+++ b/UgSqlLiteSwift/build.yaml
@@ -48,8 +48,8 @@ ios:
         - name: SQLite
           package: SQLite.swift
   sign:
-    provision-profile:
-    certificate:
+    provision-profile: ${env.UGEXAMPLES_IOS_PROVISION_PROFILE}
+    certificate: ${env.UGEXAMPLES_IOS_CERTIFICATE}
     beta-reports-active: false
   icons: 
     iphone: # or ipad, sizes: 20X20, 29X29, 40X40, 60X60, 76X76, 83.5X83.5
